# quick-start-python

./: .gitignore  README.md  docker-compose.dev.yml  project.code-workspace  pyproject.toml  pytest.ini  requirements-dev.txt
.devcontainer/: devcontainer.json
docker/python/: Dockerfile
docs/src/: conf.py  example_package.app.base.rst  example_package.app.cli.rst  example_package.app.rst  example_package.rst  index.rst
src/example_package/: __main__.py
src/example_package/app/: base.py  cli.py
tests/test_example_package/test_app/: test_base.py  test_cli.py
tools/: build-docs.sh  build-package.sh  debug.sh  gen-docsrc.sh  run.sh  test.sh
